# ChangeLog for gnome-base/libbonobo
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.142 2007/12/27 20:43:24 eva Exp $

*libbonobo-2.20.3 (27 Dec 2007)

  27 Dec 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +libbonobo-2.20.3.ebuild:
  bump to 2.20.3

*libbonobo-2.20.2 (16 Dec 2007)

  16 Dec 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +libbonobo-2.20.2.ebuild:
  bump to 2.20.2

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> libbonobo-2.20.1.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> libbonobo-2.20.1.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> libbonobo-2.20.1.ebuild:
  Marking libbonobo-2.20.1 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> libbonobo-2.20.1.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org> libbonobo-2.20.1.ebuild:
  Stable on x86 (bug #199740)

  20 Nov 2007; Samuli Suominen <drac@gentoo.org> libbonobo-2.20.1.ebuild:
  amd64 stable wrt #199740

*libbonobo-2.20.1 (17 Oct 2007)

  17 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +libbonobo-2.20.1.ebuild:
  bump to 2.20.1

*libbonobo-2.20.0 (25 Sep 2007)

  25 Sep 2007; Daniel Gryniewicz <dang@gentoo.org> +libbonobo-2.20.0.ebuild:
  New series for Gnome 2.20

  22 Sep 2007; Tom Gall <tgall@gentoo.org> libbonobo-2.18.0.ebuild:
  stable on ppc64

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> libbonobo-2.18.0.ebuild:
  Stable for HPPA (bug #185823).

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org> libbonobo-2.18.0.ebuild:
  Stable on x86, bug #185823.

  10 Aug 2007; Christoph Mende <angelos@gentoo.org> libbonobo-2.18.0.ebuild:
  Stable on amd64 wrt bug #185823

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> libbonobo-2.18.0.ebuild:
  alpha/ia64 stable wrt #185823

  07 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>