@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/libbonobo
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.142 2007/12/27 20:43:24 eva Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.144 2008/02/01 18:39:37 ranger Exp $
+
+  01 Feb 2008; Brent Baude <ranger@gentoo.org> libbonobo-2.20.3.ebuild:
+  Marking libbonobo-2.20.3 ppc64 and ppc stable for bug 208366
+
+  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
+  libbonobo-2.20.3.ebuild:
+  stable x86, bug 208366
 
 *libbonobo-2.20.3 (27 Dec 2007)
 
